Still fixing Facebook posts on mobile
- Use div framework with auto width
- Also, make text responsive

--- a/css/main.css
+++ b/css/main.css
@@ -318,7 +318,13 @@ a.thumbnail:hover {
 
 .post-content {
   margin: 0 0 30px;
-  font-size: 150%;
+  font-size: 18px;
+  line-height: 1.4;
+}
+@media (min-width: 768px) {
+.post-content {
+  font-size: 24px;
+}
 }
 
 .post-content > * {
@@ -467,23 +473,6 @@ a.thumbnail:hover {
 }
 
 .google-maps iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-/* Facebook Posts */
-.facebook-post {
-  position: relative;
-  /* (300 / 400 = 0.75 = 75%) */
-  padding-bottom: 75%;
-  height: 0;
-  overflow: hidden;
-}
-
-.facebook-post iframe {
   position: absolute;
   top: 0;
   left: 0;
